# portal2_cross

./: .gitignore  CMakeLists.txt  README.md
portal2/: main.cpp
portal2/helper/: interfaces.cpp  interfaces.h
portal2/hook/client_mode/: create_move.cpp
portal2/hook/manager/: hooking_manager.cpp  hooking_manager.h
portal2/source_engine/interfaces/: cvar.h  engine_client.h  entity_list.h
portal2/source_engine/other/: user_cmd.h
shared/defines/: defines.h
shared/hash/: fnv-1a.h
shared/hook/: hooking_methods.cpp  hooking_methods.h
shared/log/: log.cpp  log.h
shared/memory/: memory.cpp  memory.h  winapi.h
